document chunking and search by similarity

--- a/requirements.txt
+++ b/requirements.txt
@@ -111,3 +111,24 @@ google-auth==2.38.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.67.0
+django-cors-headers==4.7.0
+pgvector==0.4.1
+google-generativeai>=0.3.2
+google-genai
+
+
+
+
+pillow
+python-dotenv 
+ruff
+pydantic
+langchain
+mypy
+langchain-openai
+langchain-experimental
+
+python-magic
+
+
+
